manifest/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      #tolerations:
      #  - key: 'CriticalAddonsOnly'
      #    operator: 'Exists'
      #    effect: 'NoSchedule'
      tolerations:
        - key: 'capacity-type'
          operator: Equal
          value: on-demand-arm64
      nodeSelector:
        capacity-type: on-demand
      #  topology.kubernetes.io/zone: ap-northeast-2c
      containers:
        - name: nginx-container
          image: nginx
          #     resources:
          #       requests:
          #         cpu: 500m
          #         memory: 1Gi
          #       limits:
          #         cpu: 500m
          #         memory: 1Gi
          volumeMounts:
            # - name: s3-contents
            #   mountPath: /contents
            - name: nginx-default-conf
              mountPath: '/etc/nginx/conf.d/default.conf'
              readOnly: true
              subPath: default.conf
            - name: timezone
              mountPath: /etc/localtime
              subPath: Asia/Seoul
            # - name: s3-files
            #   mountPath: /files
            # - name: s3-static
            #   mountPath: /static
      volumes:
        # - name: s3-contents
        #   persistentVolumeClaim:
        #     claimName: pvc-s3-esp-dev-cm-contents
        - name: nginx-default-conf
          configMap:
            name: nginx-default-conf
            items:
              - key: default.conf
                path: default.conf
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo
        # - name: s3-files
        #   persistentVolumeClaim:
        #     claimName: pvc-s3-esp-dev-cm-files
        # - name: s3-static
        #   persistentVolumeClaim:
        #     claimName: pvc-s3-esp-dev-fo-static
