manifest/whatap-monitoring.yaml
apiVersion: 'v1'
kind: 'Namespace'
metadata:
  name: 'whatap-monitoring'
---
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'whatap-master-agent'
  namespace: 'whatap-monitoring'
spec:
  replicas: 1
  selector:
    matchLabels:
      name: 'whatap-master-agent'
  template:
    metadata:
      labels:
        name: 'whatap-master-agent'
    spec:
      containers:
        - command:
            - '/bin/entrypoint.sh'
          image: 'whatap/kube_mon'
          name: 'whatap-master-agent'
          ports:
            - containerPort: 6600
          resources:
            limits:
              cpu: '200m'
              memory: '350Mi'
            requests:
              cpu: '100m'
              memory: '300Mi'
          volumeMounts:
            - mountPath: '/bin/entrypoint.sh'
              name: 'start-script-volume'
              readOnly: true
              subPath: 'entrypoint.sh'
            - mountPath: '/whatap_conf'
              name: 'whatap-config-volume'
      serviceAccount: 'whatap'
      tolerations:
        - effect: NoSchedule
          key: CriticalAddonsOnly
          operator: Exists
      volumes:
        - configMap:
            defaultMode: 448
            name: 'master-start-script'
          name: 'start-script-volume'
        - emptyDir: {}
          name: 'whatap-config-volume'
---
apiVersion: 'apps/v1'
kind: 'DaemonSet'
metadata:
  labels:
    name: 'whatap-node-agent'
  name: 'whatap-node-agent'
  namespace: 'whatap-monitoring'
spec:
  selector:
    matchLabels:
      name: 'whatap-node-agent'
  template:
    metadata:
      labels:
        name: 'whatap-node-agent'
    spec:
      containers:
        - command:
            - '/data/agent/node/cadvisor_helper'
            - '-port'
            - '6801'
          image: 'whatap/kube_mon'
          name: 'whatap-node-helper'
          ports:
            - containerPort: 6801
              name: 'helperport'
          resources:
            limits:
              cpu: '200m'
              memory: '350Mi'
            requests:
              cpu: '100m'
              memory: '100Mi'
          volumeMounts:
            - mountPath: '/rootfs'
              name: 'rootfs'
              readOnly: true
            - mountPath: '/sys'
              name: 'hostsys'
              readOnly: true
            - mountPath: '/dev/disk'
              name: 'hostdiskdevice'
              readOnly: true
            - mountPath: '/run/containerd/containerd.sock'
              name: 'containerddomainsocket'
        - command:
            - '/bin/entrypoint.sh'
          image: 'whatap/kube_mon'
          name: 'whatap-node-agent'
          ports:
            - containerPort: 6600
              name: 'nodeport'
          resources:
            limits:
              cpu: '200m'
              memory: '350Mi'
            requests:
              cpu: '100m'
              memory: '300Mi'
          volumeMounts:
            - mountPath: '/rootfs'
              name: 'rootfs'
              readOnly: true
            - mountPath: '/bin/entrypoint.sh'
              name: 'start-script-volume'
              readOnly: true
              subPath: 'entrypoint.sh'
            - mountPath: '/whatap_conf'
              name: 'whatap-config-volume'
      serviceAccount: 'whatap'
      tolerations:
        - operator: Exists
      #      - effect: "NoSchedule"
      #        key: "node-role.kubernetes.io/master"
      #      - effect: "NoSchedule"
      #        key: "node-role.kubernetes.io/control-plane"
      volumes:
        - hostPath:
            path: '/'
          name: 'rootfs'
        - hostPath:
            path: '/sys'
          name: 'hostsys'
        - hostPath:
            path: '/dev/disk'
          name: 'hostdiskdevice'
        - configMap:
            defaultMode: 448
            name: 'node-start-script'
          name: 'start-script-volume'
        - emptyDir: {}
          name: 'whatap-config-volume'
        - hostPath:
            path: '/run/containerd/containerd.sock'
          name: 'containerddomainsocket'
---
apiVersion: 'v1'
kind: 'Service'
metadata:
  labels:
    run: 'whatap-master-agent'
  name: 'whatap-master-agent'
  namespace: 'whatap-monitoring'
spec:
  clusterIP: 'None'
  ports:
    - name: 'tcp-whatap-master-agent'
      port: 6600
      protocol: 'TCP'
    - name: 'tcp-whatap-confbase'
      port: 6800
      protocol: 'TCP'
  selector:
    name: 'whatap-master-agent'
