manifest/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:026090541481:certificate/8b216134-5f13-4aa6-89b4-47972144429d
    alb.ingress.kubernetes.io/group.name: ing-esp-shared-container
    alb.ingress.kubernetes.io/healthcheck-healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-success-codes: '200'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-name: alb-esp-shared-container
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: 'false'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/security-groups: sg-0e905a75bedd5e9f2
    alb.ingress.kubernetes.io/tags: Name=alb-esp-shared-container
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.order: '100'
  name: ing-esp-shared-nginx
  namespace: default
spec:
  ingressClassName: alb
  rules:
    - host: nginx-shared.ezwelesp.com
      http:
        paths:
          - backend:
              service:
                name: nginx-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: nginx-nlb.ezwelesp.com
      http:
        paths:
          - backend:
              service:
                name: nginx-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
